--- a/src/componentes/Colaborador/colaborador.css
+++ b/src/componentes/Colaborador/colaborador.css
@@ -1,4 +1,5 @@
 .colaborador {
+    position: relative;
     width: 280px;
 }
 
@@ -34,4 +35,19 @@
     line-height: 22px;
     color: #212121;
     padding: 0 16px;
+}
+.deletar{
+    position: absolute;
+    font-size: 20px;
+    border-radius: 50%;
+    padding: 4px;
+    right: -10px;
+    top: -10px;
+}
+.deletar:hover{
+    background: red;
+    cursor: pointer;
+}
+.favoritar{
+    margin: 20px 0 0 0;
 }
