--- a/src/componentes/Time/time.css
+++ b/src/componentes/Time/time.css
@@ -1,4 +1,6 @@
 .time {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 32px;
     background-blend-mode: multiply;
@@ -17,4 +19,11 @@
     justify-content: space-around;
     margin-top: 32px;
     flex-wrap: wrap;
+}
+.input-cor{
+    background: transparent;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    width: 400px;
 }
